devel
-----

* Apply user-defined idle connection timeouts for HTTP/2 and VST connections.
  The timeout value for idle HTTP/2 and VST connections can now be configured 
  via the configuration option `--http.keep-alive-timeout` in the same way
  as for HTTP/1 connections. 
  HTTP/2 and VST connections that are sending data back to the client are now 
  closed after 300 seconds or the configured idle timeout (the higher of both
  values is used here).
  Before this change, the timeouts for HTTP/2 and VST connections were hard-
  coded to 120 seconds, and even non-idle connections were closed after this
  timeout.

* Added new metric `arangodb_network_forwarded_requests` to track the number
  of requests forwarded from one coordinator to another in a load-balancing
  context.

* Added new metrics for tracking AQL queries and slow queries:
  * `arangodb_aql_query_time`: histogram with AQL query times distribution.
  * `arangodb_aql_slow_query_time`: histogram with AQL slow query times 
    distribution.
  * `arangodb_aql_all_query`: total number of all AQL queries.

* Added new metrics for replication:
  * `arangodb_replication_dump_requests`: number of replication dump requests
    made.
  * `arangodb_replication_dump_bytes_received`: number of bytes received in 
    replication dump requests.
  * `arangodb_replication_dump_documents`: number of documents received in
    replication dump requests.
  * `arangodb_replication_dump_request_time`: wait time for replication dump 
    requests.
  * `arangodb_replication_dump_apply_time`: time required for applying data
    from replication dump responses.
  * `arangodb_replication_initial_sync_keys_requests`: number of replication 
    initial sync keys requests made.
  * `arangodb_replication_initial_sync_docs_requests`: number of replication 
    initial sync docs requests made.
  * `arangodb_replication_initial_sync_docs_requested`: number of documents 
    requested via replication initial sync requests.